Update clang version matrix and runners in workflow

--- a/.github/workflows/clang-tools-amd64.yml
+++ b/.github/workflows/clang-tools-amd64.yml
@@ -15,7 +15,8 @@ jobs:
       cancel-in-progress: true
     strategy:
       matrix:
-        clang-version: [ 12, 12.0.1, 13, 14, 15, 16, 17, 18, 19, 20 ]
+        # clang-version: [ 12, 12.0.1, 13, 14, 15, 16, 17, 18, 19, 20 ]
+        clang-version: [ 18, 19, 20 ]
         os: [ linux, macosx, macos-arm, windows ]
         include:
           # Temporarily disabled versions for testing
@@ -74,7 +75,7 @@ jobs:
           - os: macosx
             # Uses a macOS amd image here
             # https://github.com/actions/runner-images
-            runner: macos-13
+            runner: macos-15-intel
             os-cmake-args: '-DCMAKE_CXX_FLAGS="-static-libgcc -static-libstdc++ -flto -ffunction-sections -fdata-sections" -DCMAKE_EXE_LINKER_FLAGS="-Wl,-dead_strip" ${POSIX_CMAKE_ARGS} ${MACOS_CMAKE_ARGS} -DLLVM_TARGETS_TO_BUILD=X86'
             build-args: '-j$(sysctl -n hw.ncpu)'
             bindir: '/build/bin'
@@ -84,7 +85,7 @@ jobs:
           - os: macos-arm
             # Uses a macOS arm image here
             # https://github.com/actions/runner-images
-            runner: macos-14
+            runner: macos-latest
             os-cmake-args: '-DCMAKE_CXX_FLAGS="-static-libgcc -static-libstdc++ -flto -ffunction-sections -fdata-sections" -DCMAKE_EXE_LINKER_FLAGS="-Wl,-dead_strip" ${POSIX_CMAKE_ARGS} ${MACOS_CMAKE_ARGS} -DLLVM_TARGETS_TO_BUILD=AArch64'
             build-args: '-j$(sysctl -n hw.ncpu)'
             bindir: '/build/bin'
@@ -258,13 +259,13 @@ jobs:
             runner: ubuntu-22.04
             arch: 'amd64'
           - os: macosx
-            runner: macos-13 # Intel macOS runner test
+            runner: macos-15-intel # Intel macOS runner test
             arch: 'amd64'
           - os: windows
             runner: windows-latest
             arch: 'amd64'
           - os: macos-arm
-            runner: macos-14 # Apple silicon macOS runner test
+            runner: macos-latest # Apple silicon macOS runner test
             arch: 'arm64'
     runs-on: ${{ matrix.runner }}
     needs: build
