--- a/.github/workflows/clang-tools-amd64.yml
+++ b/.github/workflows/clang-tools-amd64.yml
@@ -124,7 +124,7 @@ jobs:
       if: ${{ matrix.clang-version >= 9 || matrix.clang-version == '12.0.1' }}
       shell: bash
       run: |
-        tar xf ${{ matrix.release }}.tar.xz $EXTRA_EXCLUDES ${{ matrix.extra-tar-args }}
+        tar --ignore-failed-read -xf ${{ matrix.release }}.tar.xz $EXTRA_EXCLUDES ${{ matrix.extra-tar-args }}
     - name: patch clang-3.9 constify operator
       if: ${{ matrix.clang-version == 3.9 && matrix.os == 'windows' }}
       shell: bash
